--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,3 @@
-# Referrence: https://synuns.tistory.com/75
 name: CICD
 
 # 이벤트가 실행될 workflow 정의
@@ -7,31 +6,31 @@ on:
       branches:
          - main
 
-# 작업 정의(jobs)
+# 작업 정의(jobs): build, deploy
 jobs:
    build:
       runs-on: ubuntu-latest
       steps:
          - name: Checkout Source Code
            uses: actions/checkout@v4
-         - name: Create .env file
+         - name: Create env file
            run: |
               touch .env
-              echo "${{ secrets.REACT_APP_AUTH_CLIENT_ID }}" > .env
+              echo "${{ secrets.VITE_AUTH_CLIENT_ID }}" > .env
          - name: Sign in to Docker Hub
            run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
          - name: Build Docker Image
-           run: docker build -t altoel/aicc6_task_front .
+           run: docker build -t altoe/aicc6_task_front .
          - name: Push Docker Image
-           run: docker push altoel/aicc6_task_front:latest
+           run: docker push altoe/aicc6_task_front:latest
 
    deploy:
       needs: build
       runs-on: aws-ec2
       steps:
          - name: Pull image from docker hub
-           run: docker pull altoel/aicc6_task_front:latest
-         - name: Delete existing container
+           run: docker pull altoe/aicc6_task_front:latest
+         - name: Delete Existing Container
            run: docker rm -f task-container
          - name: Run container
-           run: docker run -d -p 80:80 --name reactContainer altoel/aicc6_task_front
+           run: docker run -d -p 80:80 --name task-container altoe/aicc6_task_front
