--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,17 +20,17 @@ jobs:
          - name: Sign in to Docker Hub
            run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
          - name: Build Docker Image
-           run: docker build -t altoe/aicc6_task_front .
+           run: docker build -t altoel/aicc6_task_front .
          - name: Push Docker Image
-           run: docker push altoe/aicc6_task_front:latest
+           run: docker push altoel/aicc6_task_front:latest
 
    deploy:
       needs: build
       runs-on: aws-ec2
       steps:
          - name: Pull image from docker hub
-           run: docker pull altoe/aicc6_task_front:latest
+           run: docker pull altoel/aicc6_task_front:latest
          - name: Delete Existing Container
            run: docker rm -f task-container
          - name: Run container
-           run: docker run -d -p 80:80 --name task-container altoe/aicc6_task_front
+           run: docker run -d -p 80:80 --name task-container altoel/aicc6_task_front
